libxlsxwriter/include/xlsxwriter/workbook.h


typedef struct lxw_doc_properties {
    char *title;
    char *subject;
    char *author;
    char *manager;
    char *company;
    char *category;
    char *keywords;
    char *comments;
    char *status;
    char *hyperlink_base;
    time_t created;
} lxw_doc_properties;
typedef struct lxw_workbook_options {
    uint8_t constant_memory;
    char *tmpdir;
} lxw_workbook_options;
typedef struct lxw_workbook {
    FILE *file;
    struct lxw_worksheets *worksheets;
    struct lxw_worksheet_names *worksheet_names;
    struct lxw_charts *charts;
    struct lxw_charts *ordered_charts;
    struct lxw_formats *formats;
    struct lxw_defined_names *defined_names;
    lxw_sst *sst;
    lxw_doc_properties *properties;
    struct lxw_custom_properties *custom_properties;
    char *filename;
    lxw_workbook_options options;
    uint16_t num_sheets;
    uint16_t first_sheet;
    uint16_t active_sheet;
    uint16_t num_xf_formats;
    uint16_t num_format_count;
    uint16_t drawing_count;
    uint16_t font_count;
    uint16_t border_count;
    uint16_t fill_count;
    uint8_t optimize;
    uint8_t has_png;
    uint8_t has_jpeg;
    uint8_t has_bmp;
    lxw_hash_table *used_xf_formats;
} lxw_workbook;
lxw_workbook *workbook_new(const char *filename);
lxw_workbook *workbook_new_opt(const char *filename,
                               lxw_workbook_options *options);
lxw_workbook *new_workbook(const char *filename);
lxw_workbook *new_workbook_opt(const char *filename,
                               lxw_workbook_options *options);
lxw_worksheet *workbook_add_worksheet(lxw_workbook *workbook,
                                      const char *sheetname);
lxw_format *workbook_add_format(lxw_workbook *workbook);
lxw_format *workbook_default_format(lxw_workbook *workbook);
lxw_chart *workbook_add_chart(lxw_workbook *workbook, uint8_t chart_type);
lxw_error workbook_close(lxw_workbook *workbook);
lxw_error workbook_set_properties(lxw_workbook *workbook,
                                  lxw_doc_properties *properties);
lxw_error workbook_set_custom_property_string(lxw_workbook *workbook,
                                              const char *name,
                                              const char *value);
lxw_error workbook_set_custom_property_number(lxw_workbook *workbook,
                                              const char *name, double value);
lxw_error workbook_set_custom_property_integer(lxw_workbook *workbook,
                                               const char *name,
                                               int32_t value);
lxw_error workbook_set_custom_property_boolean(lxw_workbook *workbook,
                                               const char *name,
                                               uint8_t value);
lxw_error workbook_set_custom_property_datetime(lxw_workbook *workbook,
                                                const char *name,
                                                lxw_datetime *datetime);
lxw_error workbook_define_name(lxw_workbook *workbook, const char *name,
                               const char *formula);
lxw_worksheet *workbook_get_worksheet_by_name(lxw_workbook *workbook,
                                              const char *name);
lxw_error workbook_validate_worksheet_name(lxw_workbook *workbook,
                                           const char *sheetname);
void lxw_workbook_free(lxw_workbook *workbook);
void lxw_workbook_assemble_xml_file(lxw_workbook *workbook);
void lxw_workbook_set_default_xf_indices(lxw_workbook *workbook);